<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Activities.OrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivproduct"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/vitamins" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMedicineName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/multi_vitamin"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/med_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvMedicineName"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="90 pils"
                        android:textColor="@color/black" />



                    <ImageButton
                        android:id="@+id/ibadd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@null"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="AddQuantity"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_circle" />

                    <TextView
                        android:id="@+id/tvquantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ibadd"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/ibminus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/tvquantity"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="16dp"
                        android:background="@null"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="SubQuantity"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_remove_circle" />

                    <TextView
                        android:id="@+id/detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/med_qty"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/product_detail"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/product_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ibminus"
                     android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:ellipsize="end"
                        android:maxLines="20"
                        android:text="@string/info_detail"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/product_detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/product_detail"
                        android:layout_margin="16dp"

                        android:text="@string/price_217"
                        android:textColor="#FF0000" />

                    <Button
                        android:id="@+id/btnAddtoCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/product_detail_price"
                        android:layout_margin="16dp"
                        android:drawableLeft="@drawable/ic_shopping_cart_white"
                        android:text="Add to cart"
                        app:cornerRadius="20dp" />


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>