<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#F49F9F"
    android:paddingStart="10dp"
    android:layout_marginTop="10dp"
    android:paddingEnd="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cart"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMedicineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_vitamin"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/tvMedicineStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available"
                android:layout_alignParentRight="true"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:id="@+id/layoutprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMedicineName"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/med_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMedicineName"
                    android:layout_gravity="center_vertical"
                    android:text="Quantity "
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvquantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ibadd"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="60dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/ibadd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="AddQuantity"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_circle"
                    app:tint="@color/purple_500" />

                <ImageButton
                    android:id="@+id/ibminus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="SubQuantity"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_remove_circle" />

                <TextView
                    android:id="@+id/product_detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/product_detail"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    android:text="@string/price_217"
                    android:textColor="#FF1100" />


            </LinearLayout>

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutprice"
                android:text="@string/product_detail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/product_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/info_detail"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_detail"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirmCartOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/product_detail_price"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_shopping_cart_white"
                    android:text="Order"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/btnCancelCartOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/product_detail_price"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:drawableLeft="@drawable/ic_shopping_cart_white"
                    android:text="Delete"
                    app:cornerRadius="20dp" />
            </LinearLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>